# dart

./: .gitignore  INSTALL  Makefile  Makefile.in  README  acinclude.m4  configure  configure.in
data/: z3i2.tg  z4i2.tg
data/handalign/: hidden.hsm  jc.hsm  kimura.hsm  prot1.hsm  prot2.hsm  prot3.hsm  prot4.hsm  tcod.eg  tcod.hsm
data/hsmem/: HSM1  HSM3  HSM4
data/pdmcmc/: pdtest.stk  right.stk  wrong.stk
data/phylocomposer/: Makefile  counts.sxpr  fully_constrained.sxpr  geometric_parent.sxpr  gotoh_counts.sxpr  gotoh_node.sxpr  mixture_geometric_parent.sxpr  noseq.sxpr  postprof.sxpr  seq.sxpr  short.pl  short.sxpr  tkf91.sxpr  tkf91_aunt.sxpr  tkf91_aunt_with_emit_labels.sxpr  tkf91_node.sxpr  tkf91_node_with_emit_labels.sxpr  tkf91_parent.sxpr  tkf91_serial.sxpr
data/stemloc/: z1i2.tg  z2i2.tg
data/tkfalign/: phe.dist  phe.tree  phe.trna
data/xrate/: Lysine.stock  Purine.stock
doc/: BuildingDart.txt  DART.txt  DartLogging.txt  DartPerlScripts.txt  DartPython.txt  DownloadingDart.txt  EvolDoer.txt  EvolSayer.txt  FastaFormat.txt  HandAlign.txt  HowMuchTrainingDataDoINeed.txt  IndieGram.txt  NewickFormat.txt  PhyloComposer.txt  StemLoc.txt  StockholmFormat.txt  XRateSoftware.txt  XrateFormat.txt  XrateGrammars.txt  XrateMacros.txt  XrateTutorial.txt  index.html
grammars/: 2rate_hky85.eg  README  XDecoder.eg  akaksgc.eg  ancestral_codon_bias.eg  ancestral_gc.eg  ancestral_gc3.eg  autodiscgamma.eg  binary-dna-rich.eg  binary-dna.eg  codon.eg  conservation_phylohmm.eg  conservation_phylohmm_to_wig.pl  cpg-dinuc-r4p16.eg  cpg-gapped-dinuc-r8p25.eg  dinuc.eg  dna_alphabet.eg  dna_symmetric_gapsub.eg  ecm-tokenized.eg  ecm.eg  exon.eg  fels81.eg  hky85.eg  inullrna.eg  jukescantor-parametric.eg  jukescantor.eg  kimura2.eg  lead_lag.eg  lead_lag2.eg  loopstem.eg  ncRnaDualStrand.eg  nielsen-yang.eg  nullprot.eg  ny_phylohmm.eg  overprinter.eg  pfold-loopmodel.eg  pfold-mix80-param.eg  pfold-mix80.eg  pfold-stemmodel.eg  pfold.eg  (+17 more)
grammars/demaio-et-al-2013/: S1.eg  S2.eg  S3.eg
grammars/generators/: Makefile  akaksgc.pl  akaksgc.tmpl.eg  cat.pl  codeml.pl  codeml.tmpl.eg  hky85.tmpl.eg  ka_ks.pl  noself.pl  phylohmmgenerator.pl  sn.pl  sn.stk  sn.tmpl.eg
grammars/heger-ponting-holmes-2009/: codonML-transmembrane.eg  codonML.eg
grammars/kosiol-holmes-goldman-2007/: ecm-rest.eg  ecm-unrest.eg
grammars/soohong/: irrev.eg  lead_lag2.eg  lead_lag2_scale.eg  lead_lag_scale.eg
lib/: README
misc/: README  stl_vector.h
perl/: Bubbles.pm  ChainDat.pm  DartSexpr.pm  MCMCcluster.pl  Newick.pm  PhyloGram.pm  Roc.pm  SequenceIterator.pm  Stockholm.pm  ancrec_to_seq.pl  animate-evolsayer.pl  baliphy2stockholm.pl  calc_ss_cons.pl  clustal2stockholm.pl  col2stockholm.pl  colorstock.pl  compareParams.pl  constock.pl  copy2stderr.pl  copyparams.pl  dartlog.pl  drop-gappy-columns.pl  ecm2eg-tokenized.pl  ecm2eg.pl  evolsayer.pl  extract_ss.pl  fancyeisen.pl  fasta2stockholm.pl  foldplot.pl  homstrad2stockholm.pl  hsm2xgram.pl  hsmplot.pl  iteridem.pl  maf2stockholm.pl  majorcons.pl  msf2stockholm.pl  old_xrate.pl  optic2stockholm.pl  pandit2stockholm.pl  percentid.pl  (+32 more)
perl/Microarray/: Data.pm
perl/PhyloGram/: Chain.pm  Dna.pm  Protein.pm
perl/Stockholm/: Database.pm
python/: .project  .pydevproject  README  SExpr.py  extra_functions.py  mixture_gen.py  parseSexpr.py  parsetab.py  setup.py  visualizeReconstruction.py
python/XGram/: Exceptions.py  Lexer.py  Parser.py  XGram.py  __init__.py
scheme/: xrate-stdlib.scm
scheme/t/: ny.eg  ny2.eg  xrate-stdlib.test.scm
src/: .gitignore  Doxyfile  config.h.in  make.common  make.common.in  make.defs  make.defs.in
src/Weighbor/: COPYRIGHT  INSTALL  Makefile.in  README  build.c  calcb.c  calcq.c  calcz.c  calerf.c  cnoweb.tex  io.c  io.h  matrix.c  matrix.h  noise.c  tree.c  tree.eps  tree.h  weighbor.c  weighbor.h
src/amap/: Makefile  MultiSequence.h  MultiSequenceDag.h  SafeVector.h  Sequence.h  SparseMatrix.h  amap_adapter.cc  amap_adapter.h  dotplot.cc  dotplot.h
src/beagle/: Makefile  xrate-beagle.cc
src/ecfg/: A1pp.pep  Makefile  Makefile.in  darts.cc  ecfg.cc  ecfg.h  ecfg_branch_length_em.cc  ecfg_branch_length_em.h  ecfgdp.cc  ecfgdp.h  ecfgenv.cc  ecfgenv.h  ecfgkeywords.h  ecfgmain.cc  ecfgmain.h  ecfgplacer.cc  ecfgplacer.h  ecfgsexpr.cc  ecfgsexpr.h  fastprune.cc  fastprune.h  guile-ecfg.cc  guile-ecfg.h  hsm2eg.cc  paircfg_xfold.cc  paircfg_xfold.h  pdmcmc.cc  pdmcmc_main.cc  pdmcmc_main.h  pfold.cc  pfold.h  protgrammar.cc  protgrammar.h  simgram.cc  single_chain_ecfg.cc  single_chain_ecfg.h  testchain.cc  testsexpr.cc  xfold.cc  xgram.cc  (+2 more)
src/empath/: FINDREPS-TESTSEQ  MEME-TESTSEQ  MULTIHIT-TESTSEQ  Makefile  POLYA-TESTSEQ  REPS-TESTSEQ  REVTEST  bindpaircfg.cc  bindpaircfg.h  chewpolya.cc  empath.cc  exprhit.cc  exprhit.h  findbind.cc  findreps.cc  firstword.cc  motif.cc  motif.h  multihit.cc  multihit.h  p53.cc  p53.h  p53search.cc  repeater.cc  repeater.h  shortlist.cc  shortlist.h  showmask.cc  test_trirep_set.cc  trainer.cc  trainer.h  trirep.cc  trirep.h  ungapped.cc  ungapped.h
src/evoldoer/: Makefile  Makefile.in  evoldoer.cc  tkfstparams.pl  tkfstructuretree.cc  tkfstructuretree.h
src/exp/: README  cdspair.cc  cdspair.h  cdspaircfg.cc  cdspaircfg.h  handalign.pl  handcount.pl  lexcfg.cc  lexcfg.h  longalign.cc  matrix_array.cc  matrix_array.h  mxyem.cc  mxyinit.cc  progalign.cc  progalign.h  proghmm.cc  proghmm.h  progress.cc  quickcdspair.cc  quickcdspair.h  swexmid.cc  swexmid.h
src/gfx/: Makefile  dotplot.cc  dotplot.h  dottrack.cc  foldpic.cc  foldpic.h
src/guile/: Makefile  (+23 more)
telegraph/: Makefile  dnasw.tg  gram.y  list_assignment.c  list_assignment.h  newick.c  runtests  scan.l  simulate-grammar.pl  stkdata.c  stkutil.h  tgbuildgrammar.h  tgcheck.c  tgcheck.h  tgcompiler.c  tgcompiler.h  tgdefs.c  tgexpression.h  tggrammar.h  tgindices.h  tgoutputgrammar.h  tgparsetree.h  tgprob.h  tgprobscore.c  tgprobscore.h  tgrule.h  tgscore.h  tgsequence.h  tgsymbol.h  tgtypetable.h  tgvector.h
vrmlmod/: Makefile  VRMLMOD.txt  datastruct.c  datastruct.h  newick.c  util.h  vrmlmod.c
(+781 files in other folders)
